# battery_control

./: README.md  tool_set_config.json
.metadata/: version.ini
.metadata/.plugins/com.espressif.idf.terminal.connector.serial/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.core/: basic_ulp.1743193822965.pdom  button_wakeup_ulp.1743540713439.pdom  button_wakeup_ulp_2.1743781835994.pdom  deep_sleep_example.1737667693133.pdom  led_blink_and_ulp.1737580324866.pdom  led_on_off.1737553968387.pdom  max17048_test.1738783333016.pdom  ulp_adc.1742421413439.pdom  ulp_pin_control.1738701082319.pdom
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 53.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: basic_ulp Debug.launch  basic_ulp.launch  button_wakeup_ulp Debug.launch  button_wakeup_ulp.launch  button_wakeup_ulp_2 Debug.launch  button_wakeup_ulp_2.launch  deep_sleep_example Debug.launch  deep_sleep_example.launch  led_blink_and_ulp Debug.launch  led_blink_and_ulp.launch  led_on_off Debug.launch  led_on_off.launch  max17048_test Debug.launch  max17048_test.launch  ulp_adc Debug.launch  ulp_adc.launch  (+2 more)
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
basic_ulp/: .cproject  .project
basic_ulp/main/: CMakeLists.txt  main.c
basic_ulp/main/ulp/: example_ulp.S
button_wakeup_ulp/: .cproject  .project
button_wakeup_ulp/main/: CMakeLists.txt  main.c
button_wakeup_ulp/main/ulp/: ulp_program.S
button_wakeup_ulp_2/: .cproject  .project
button_wakeup_ulp_2/main/: CMakeLists.txt  main.c
button_wakeup_ulp_2/main/ulp/: ulp_program_2.S
deep_sleep_example/: .cproject  .project  sdkconfig
deep_sleep_example/main/: CMakeLists.txt  main.c
deep_sleep_example/main/ulp/: main.S
led_blink_and_ulp/: .cproject  .project
led_blink_and_ulp/main/: CMakeLists.txt  main.c
led_blink_and_ulp/main/ulp/: ulp_code.S
led_on_off/: .cproject  .project  sdkconfig.old
led_on_off/main/: main.c
main.S/: .cproject  .project
max17048_test/: .cproject  .project  sdkconfig
max17048_test/main/: CMakeLists.txt  main.c
max17048_test/main/ulp/: example_config.h  i2c_ulp.S
ulp_adc/: .cproject  sdkconfig
ulp_adc/main/: CMakeLists.txt  main.c
ulp_adc/main/ulp/: example_config.h
ulp_pin_control/: .cproject  .project
ulp_pin_control/main/: CMakeLists.txt  main.c
ulp_pin_control/main/ulp/: ulp_program_high.S  ulp_program_low.S
(+37 files in other folders)
